--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header>
             <img src="img/icone.png" alt="imagem de uma agenda em vetor">
-            Agenda de contatos
+            <h1>Agenda de contatos</h1>
         </header>
 
         <section>
